# qa-on-diagrams

./: .env.base  .gitignore  Makefile  README.md  pyproject.toml
Assignment/: 01_data_parsing.ipynb  02_generate_qa_dataset.ipynb  03_answers_generation.ipynb  04_evaluation.ipynb
Assignment/data/: 01_img_json_raw.json  02_img_json_relevant_keys.json  eval_claude_image.json  eval_gpt_image.json  eval_qwen_image.json  qna_results.json
experiment/: 01_data_parsing.ipynb  02_generate_qa_dataset.ipynb
experiment/data/: 03_img_json_with_questions.json  eval_claude_text.json  eval_gpt_text.json  eval_qwen_text.json
